tests/paczka1/small_fuzzy/84304764.err
Error in line 4: TZT5Hi1j4 S200 -1,7
Error in line 3: S237 A875 705,8
